<resources>
    <string name="app_name">CCの</string>
    <!--CCの-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="fileProvider">com.cc.space.fileprovider</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_account">昵称/手机/邮箱</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_userName">This userName is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_edit">"编辑"</string>
    <string name="action_share">"分享"</string>
    <string name="action_more">"更多"</string>
    <string name="action_update">"更新"</string>


    <string name="nav_collect">"我的收藏"</string>
    <string name="nav_location">"位置"</string>
    <string name="nav_history">"历史"</string>
    <string name="nav_profile">"简介"</string>
    <string name="nav_home">"首页"</string>
    <string name="nav_setting">"设置"</string>
    <string name="nav_login_out">"退出"</string>

    <string name="brvah_app_name">Library</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="title_activity_tab_test">TabTestActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_drawer_demo">DrawerDemoActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_tab2">Tab2Activity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_loginx">Sign in</string>


</resources>
