<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/brvah_app_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme.AppBarOverlay"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!--android:theme="@style/AppTheme.AppBarOverlay"-->

    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->


    <!--android:background="@color/toolbarBack"-->
    <!--
   上拉数据后标题栏隐藏
    app:layout_scrollFlags="scroll|enterAlways"-->

    <androidx.appcompat.widget.Toolbar
        app:layout_scrollFlags="scroll|enterAlways"
        android:id="@+id/manga_toolbar"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >
        <!--android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/nav_topLeft_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="left"
            android:layout_marginRight="20dp"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"/>
        <EditText
            android:id="@+id/manga_toolbar_search_input"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:maxLines="1"
            android:singleLine="true"
            android:padding="@dimen/dp_2"
            android:drawableLeft="@drawable/input_search"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/edit_text_circle_corner"
            />

        <!--
        点击输入框显示输入框 不点击则显示 搜索图标加文字
        类似淘宝搜索
        <RelativeLayout
        android:id="@+id/layout_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF5000"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <LinearLayout
            android:id="@+id/layout_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/search_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="搜索" />
        </LinearLayout>


        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>



      mEtSearch = (EditText) findViewById(R.id.et_search);
        mLayoutDefaultText = (LinearLayout) findViewById(R.id.layout_default);
        // editText 离开监听
        mEtSearch.setOnFocusChangeListener(new OnFocusChangeListener() {

            @Override
            public void onFocusChange(View v, boolean hasFocus) {
                // hasFocus 为false时表示点击了别的控件，离开当前editText控件
                if (!hasFocus) {
                    if ("".equals(mEtSearch.getText().toString())) {
                        mLayoutDefaultText.setVisibility(View.VISIBLE);
                    }
                }
                else {
                    mLayoutDefaultText.setVisibility(View.GONE);
                }
            }
        });
        -->


    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:layout_weight="1"
        android:id="@+id/operList__tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/operList_tabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"

            android:text="@string/tab_text_1" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/operList_tabItem2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_text_2" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/operList_tabItem3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_text_3" />

    </com.google.android.material.tabs.TabLayout>
    <!--android.support.design.widget.AppBarLayout-->
</com.google.android.material.appbar.AppBarLayout>
